--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+    <title>Multimedia</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <body>
+    <header>
+        <nav class="navbar">
+            <div class="left">
+                <div class="logo">
+                    <img src="images/Logo_CUSC_Multimedia-8.png" alt="">
+                </div>
+            </div>
+            <div class="right">
+                <div>Trang chủ</div>
+                <div>Dịch vụ <i class="fa fa-angle-down"></i></div>
+                <div>Các dự án</div>
+                <div>Về chúng tôi</div>
+                <div>Liên hệ</div>
+                <div>
+                    <img src="images/icon_search.svg" alt="">
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
-</html>l
+</html>
