--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </form>
                 </div>
                 <div class="map-button-container">
-                    <button style="font-size:24px" class="map-button">Xem trên Google Maps
+                    <button  class="map-button">Xem trên Google Maps
                         <i class='fas fa-map-marked-alt'></i>
                     </button>
                 </div>
